2017-01-19  Charlie Zender  <zender@uci.edu>

	* ncremap change standard_name of area_nm_out from cell_area to area

	* Extract variables in CF "cell_measures" attributes

	* Add areacella to in.cdl in preparation for adding CF cell_measures variables to extraction list

	* NCO 4.6.4-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-alpha05 final changes';git push
	git tag -a 4.6.4-alpha05 -m 'Version 4.6.4-alpha05 new features: fix stdin detection, var_xtr_xtn';git push --tags

	* Rewrite stdin pipe data detection in ncclimo, ncremap
	Fixes bug running in batch mode where disconnected terminal caused scripts to expect input from stdin pipe

	* ncsplit remove lat/lon from automatic extraction for CAM (only present in regridded files)

	* ncsplit change old gnr_flg to new clm_flg so climatology-generation mode is consistent

2017-01-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.4-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-alpha04 final changes';git push
	git tag -a 4.6.4-alpha04 -m 'Version 4.6.4-alpha04 new features: tidy warnings, UDUnits fix, w_stag, split doc, formula_terms';git push --tags

	* Verify formula_terms-based extractions work

2017-01-17  Charlie Zender  <zender@uci.edu>

	* Extract variables in CF "formula_terms" attributes

	* Fix attributes in hdn.cdl

2017-01-16  Charlie Zender  <zender@uci.edu>

	* Squelch warning about deflation with netCDF3 output when dfl_lvl == 0

2017-01-13  Charlie Zender  <zender@uci.edu>

	* Verified ncremap produces identical w_stag weights to those in
	b.e11.BRCP26C5CNBDRD.f09_g16.1pt5degC.001.cam.h0.AODVIS.200601-210012.nc

	* Add staggered latitude weight w_stag to FV output grids (since NCAR CCSM4 AMIP does)

	* Print offending multi-argument when input error found

	* ZKB in UDUnits code after fixing skyglow UDUnits installation

2017-01-12  Charlie Zender  <zender@uci.edu>

	* Fix all compiler warnings in nco_cln_utl.[ch]
